--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,21 +12,14 @@ services:
                 - PGID=${PGID}
                 - INSTALL_XDEBUG=${INSTALL_XDEBUG}
         volumes:
-            - ../app:/var/www/app
-            - ../bootstrap:/var/www/bootstrap
-            - ../config:/var/www/config
-            - ../database:/var/www/database
-            - ../public:/var/www/public
-            - ../resources:/var/www/resources
-            - ../routes:/var/www/routes
-            - ../src:/var/www/src
-            - ../templates:/var/www/templates
-            - ../tests:/var/www/tests
+            - ..:/var/www
+            - /var/www/vendor
+            - /var/www/storage
         networks:
             - app-network
 
-    nginx:
-        container_name: nginx
+    webserver:
+        container_name: webserver
         build:
             context: ./nginx
         ports:
